# gcloud-sdk-signed-url

./: Cargo.toml
example/: Cargo.toml
examples/v2-signing/: Cargo.toml
examples/v4-signing/: Cargo.toml
gcloud-sdk-signed-url/: Cargo.toml
gcloud-sdk-signed-url/src/: error.rs  lib.rs  options.rs  url_style.rs
gcloud-sdk-signed-url/src/scheme/: v2.rs  v4.rs
src/: lib.rs
src/options/: action.rs  mod.rs  url_style.rs  version.rs
src/sign/: buffer.rs  method.rs  mod.rs
src/sign/scheme/: mod.rs  v2.rs  v4.rs
